# RainClassroomAssistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RainClassroomAssistant.py  RainClassroomAssistant.spec  file_version_info.txt  generate_version_info.py  pixi.toml  pyproject.toml  requirements.txt  update_version.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature-request.yaml
.github/workflows/: issue-action.yml  python-app.yml  release.yml
JS/: RainClassroomAssistant.js
Scripts/: Classes.py  Monitor.py  Notifier.py  PPTManager.py  Update.py  Utils.py
UI/: Config.py  Login.py  MainWindow.py
