[project]
name = "rainclassroomassistant"
version = "0.5.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepdiff>=8.6.1",
    "fpdf>=1.7.2",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "pre-commit>=4.3.0",
    "pyinstaller>=6.16.0",
    "pypdf2>=3.0.1",
    "pyqt5>=5.15.11",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "websocket-client>=1.9.0",
    "win10toast>=0.9 ; sys_platform == 'win32'",
]

[dependency-groups]
dev = ["pyqt5==5.15.11", "pyqt5-qt5==5.15.2"]
