[project]
name = "rainclassroomassistant"
version = "0.5.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apprise>=1.9.5",
    "deepdiff>=8.6.1",
    "fpdf>=1.7.2",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.2",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "websocket-client>=1.9.0",
]

[dependency-groups]
dev = [
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pre-commit>=4.4.0",
    "pyinstaller>=6.16.0",
]
